# recorder

./: .env.example  .gitignore  Pipfile  README.md  config.py  main.py  pyproject.toml  record.py
config/: .recording-config.yml.example
service/: grow-recorder.service.example  install.sh
src/: config.py  record.py  types.py
